...
    <string name="ok_label">OK</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>
    <string name="back">Back</string>
    <string name="toggle_visibility">Toggle content visibility</string>
    <string name="selected_label">%d selected</string>
    <string name="reset_selection">Reset selection</string>
    <string name="delete_selected">Delete selected items</string>

</resources>

